# neoanki

./: Cargo.toml  README.md  log4rs.yaml
src/: consts.rs  data.rs  flags.rs  game.rs  main.rs  states.rs
src/game/: draw.rs  field.rs  game.rs  heplers.rs  mod.rs
