[package]
name = "neoanki"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
crossterm = "0.27.0"
rand = "0.8.5"
ratatui = "0.27.0"
rust-translate = "0.1.3"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
whoami = "1.5.1"
log = "0.4.22"
log4rs = "1.3.0"
